@@ -1,0 +1,8 @@
+// SPDX-License-Identifier: GPL-3.0-or-later
+#include <QString>
+
+namespace drawdance {
+
+QString decompressZstdFile(const QString &path);
+
+}
